# residential_scraper

./: .gitignore  main.py  pyproject.toml
